open button fixed on mobile view when logged out

--- a/Frontend/eduShare/src/app/components/material-card/material-card.component.sass
+++ b/Frontend/eduShare/src/app/components/material-card/material-card.component.sass
@@ -101,7 +101,7 @@
     margin-left: 0
     margin-right: 0
 
-.open-button
+.open-button, .open-button-big
     width: 65%
     height: 40px
     background-color: $card-font-puprle
@@ -190,3 +190,15 @@
         width: 75% !important
         margin-left: 5%
         margin-right: 5%
+
+    .open-button-big
+        width: 90% !important
+        height: 40px
+        background-color: $card-font-puprle
+        border-radius: 10px
+        border: 0px
+        color: white 
+        font-size: 20px
+        margin-left: 20px
+        margin-right: 10px
+        transition-duration: 0.3s
